/**
 * Enum for assignment topics.
 * @readonly
 * @enum {string}
 */
export enum AssignmentTopic {
    FLASK = 'FLASK',
    IOT = 'IOT',
    PYTHON = 'PYTHON',
    ROBOTIC = 'ROBOTIC',
    SQL = 'SQL',
    SCRATCH = 'SCRATCH',
    WEB = 'WEB',
}
